Added early verion of the News list

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -58,5 +58,7 @@ I'm gonna bleed red, white and blue
 I'm gonna bleed red, white and blue
 I'm gonna bleed red, white and blue
 I'm gonna bleed red, white and blue" </string>
+    <string name="news_body_placeholder">SHRED</string>
+    <string name="news_author_placeholder">This is Hardcore 2013</string>
 
 </resources>
