--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">This is Hardcore</string>
+    <string name="news_empty">Couldn\'t retrieve news.</string>
     <string name="action_settings">Settings</string>
     <string name="bookmarks">Bookmarks</string>
     <string name="more">More</string>
