--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="app_name">This is Hardcore</string>
     <string name="news_empty">Couldn\'t retrieve news.</string>
     
+    <string name="no_network_connection_toast">No Connection</string>
+    
     <!-- More Navigation -->
     <string name="stuff_to_do">Stuff to do in Philly</string>
     <string name="accommodations">Accommodations</string>
