--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,11 @@
 <resources>
 
     <string name="app_name">This is Hardcore</string>
-    <string name="news_empty">Couldn\'t retrieve news.</string>
+    
+    <!-- More Navigation -->
+    <string name="schedule_empty">Couldn\'t fetch the Schedule</string>
+    <string name="photo_pit_empty">Couldn\'t fetch Instagram Photos</string>
+    <string name="news_empty">Couldn\'t fetch News</string>
     
     <string name="no_network_connection_toast">No Connection</string>
     
