--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,14 +3,14 @@
 
     <string name="app_name">This is Hardcore</string>
     <string name="loading_footer_text">Loading&#8230;</string>
-    
-    <!-- Empty Messages -->
+
+    <!-- Error Messages -->
     <string name="schedule_empty">Couldn\'t fetch the Schedule</string>
     <string name="photo_pit_empty">Couldn\'t fetch Instagram Photos</string>
     <string name="news_empty">Couldn\'t fetch News</string>
-    
     <string name="no_network_connection_toast">No Connection</string>
-    
+    <string name="error_message">Sorry, but the TIH Application has crashed. You can either quit now or if you want to be a nice guy you can send us over an email by tapping \'Email\' below. Have a good time at This is Hardcore.</string>
+
     <!-- More Navigation -->
     <string name="stuff_to_do">Stuff to do in Philly</string>
     <string name="accommodations">Accommodations</string>
@@ -18,7 +18,7 @@
     <string name="tihc_twitter">TIHC Twitter</string>
     <string name="about_tihc">About TIHC</string>
     <string name="about_artisan">About Artisan</string>
-    
+
     <!-- More URLs -->
     <string name="stuff_to_do_url">http://assets.apprenaissance.com/tihc/stuff_to_do_in_philly.html</string>
     <string name="accommodations_url">http://assets.apprenaissance.com/tihc/accomodations.html</string>
@@ -26,7 +26,7 @@
     <string name="tihc_twitter_url">https://twitter.com/#!/TIHCfest</string>
     <string name="about_tihc_url">http://www.thisishardcorefest.com/</string>
     <string name="about_artisan_url">http://useartisan.com</string>
-    
+
     <!-- Placeholder Text -->
     <string name="event_icon">eventIcon</string>
     <string name="photo_author_placeholder"> Photo Name Placeholder </string>
@@ -86,5 +86,8 @@ I'm gonna bleed red, white and blue
 I'm gonna bleed red, white and blue" </string>
     <string name="news_body_placeholder">SHRED</string>
     <string name="news_author_placeholder">This is Hardcore 2013</string>
+    <string name="title_activity_exception">ExceptionActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
