--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">This is Hardcore</string>
+    <string name="app_name">TIHC</string>
     <string name="loading_footer_text">Loading&#8230;</string>
 
     <!-- Error Messages -->
